--- a/test-html/signin.html
+++ b/test-html/signin.html
@@ -7,6 +7,23 @@
     <title>MUZER - Sign In</title>
 </head>
 <body>
-    
+    <div id="signin-box">
+        <form action="/auth/login" method="post">
+            <div>
+                 <label>Email:</label>
+                 <input type="text" name="email"/>
+            </div>    
+            <div>
+                 <label>Password:</label>
+                 <input type="password" name="password"/>
+            </div>
+            <div>
+                 <input type="submit" value="Log In"/>
+            </div>
+      </form>
+    </div>
+
+
+
 </body>
 </html>
