--- a/test-html/signup.html
+++ b/test-html/signup.html
@@ -7,6 +7,22 @@
     <title>MUZER - Sign Up</title>
 </head>
 <body>
-    
+    <form action="/auth/signup" method="post">
+        <div>
+             <label>Email:</label>
+             <input type="text" name="username"/>
+        </div>    
+        <div>
+             <label>Password:</label>
+             <input type="password" name="password"/>
+        </div>
+        <div>
+            <label>Confirm Password:</label>
+            <input type="password" name="confirm-password"/>
+       </div>
+        <div>
+             <input type="submit" value="Start Muzing!"/>
+        </div>
+  </form>
 </body>
 </html>
