--- a/test-html/signup.html
+++ b/test-html/signup.html
@@ -10,7 +10,7 @@
     <form action="/auth/signup" method="post">
         <div>
              <label>Email:</label>
-             <input type="text" name="username"/>
+             <input type="text" name="email"/>
         </div>    
         <div>
              <label>Password:</label>
