--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,7 @@
       href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css"
     />
     <link rel="stylesheet" href="%PUBLIC_URL%/css/main.css">
-    
+    <link href="https://fonts.googleapis.com/css?family=Laila:500" rel="stylesheet">
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
