--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,6 @@
       rel="stylesheet"
       href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css"
     />
-    <link rel="stylesheet" href="%PUBLIC_URL%/css/main.css">
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
@@ -30,10 +29,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Muzer</title>
   </head>
   <body>
-
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/main.css">
     <div id="app"></div>
     <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
   </body>
